# claude-settings

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  implementation_plan.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: claude-code-settings-reference.md
docs/superpowers/plans/: 2026-04-17-resource-editing-and-claudemd-enhancement.md  2026-04-19-session-history-viewer.md
docs/superpowers/specs/: 2026-04-19-session-history-viewer-design.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.tauri/: claude-settings.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/TabBar/: TabBar.css  TabBar.tsx
src/components/dialogue/: DialogueTab.css  MessageBubble.tsx  SessionList.tsx  SessionView.tsx  SubagentGroup.tsx
src/components/tabs/: AdvancedTab.tsx  AgentsTab.tsx  BasicSettings.tsx  ClaudeMd.tsx  CommandsTab.tsx  DialogueTab.tsx  EnvVars.tsx  GlobalTab.tsx  Hooks.tsx  (+14 more)
src/data/: changelog.ts
src/hooks/: useDialogue.ts  useFieldValidation.ts  useFileManager.ts  useManagedField.ts  useResourceLoader.ts  useTheme.ts  useUpdater.ts
src/schemas/: claude-code-settings.schema.json
src/store/: dialogueStore.ts  settingsStore.ts
src/types/: dialogue.ts  settings.ts
src/utils/: commandMaterializer.ts  defaultPaths.ts  estimateTokens.ts  frontmatter.ts  jsonlParser.ts  merge.ts  parseClaudeMdImports.ts  pathEncoder.ts  pathResolver.ts  platform.ts  schemaValidator.ts  skippedVersion.ts  validate.ts
(+21 files in other folders)
